--- a/AjaxSovellus/style.css
+++ b/AjaxSovellus/style.css
@@ -1,47 +1,97 @@
 body {
-background: silver;
+background: url("background.jpg");
+
+
 }
 
 input {
-    border-color: silver;
-
-
-
+    border-color: #2ba6cb;
+    border-radius:5px;
+    width: 100%;
+    background-color: silver;
 }
 
+
+
+
 button {
-    position: center;
+    border: none;
+    color: black;
+    background-color: #2ba6cb;
+    text-decoration: none;
+    cursor: pointer;
+
 }
 
 h1 {
-
+font-style: italic;
+    color: black;
+    background-color: grey;
 }
 
 div {
-    border-left: solid;
-    border-right: solid;
 
+    display:flex;
     border-width: 5mm;
-}
-
-.container {
+    flex-wrap: wrap;
     max-width: 1140px;
     margin-left: 70.5px;
     margin-right: 70.5px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 150px;
+    padding-right: 150px;
+    justify-content: center;
 
 }
 
-.center {
+header {
+display: flex;
 
 }
 
-.hakuteksti {
+
+
+.container {
+position:relative;
+    border-left: ridge;
+    border-right: ridge;
+    background: url("12.jpg");
+    background-repeat: repeat-y;
 
 }
+
+img {
+width: 50%;
+}
+
+
 
 p {
-    background-color: cornflowerblue;
+    background-color: silver;
+    border-top: solid;
+    border-bottom: solid;
+    border-left: solid;
+    border-right: solid;
+    border-width: 2px;
+    border-radius:5px;
 }
 
+p2 {
+    color: silver;
+}
+
+
+
+h3 {
+    display:flex;
+    background: silver;
+
+}
+
+/*border-left: solid;
+border-right: solid;/*
+
+/*max-width: 1140px;
+    margin-left: 70.5px;
+    margin-right: 70.5px;
+    padding-left: 15px;
+    padding-right: 15px;  /*
